BASICParser/BASICParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BASIC.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class BASICParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, LETTER=41, DIGIT=42, STRINGCHARACTER=43, QUOTEDSTRINGCHARACTER=44, 
		UNQUOTEDSTRINGCHARACTER=45, PLAINSTRINGCHARACTER=46, REMARKSTRING=47, 
		QUOTEDSTRING=48, UNQUOTEDSTRING=49, SPACE=50, EXCLAMATIONMARK=51, QUOTATIONMARK=52, 
		NUMBERSIGN=53, DOLLARSIGN=54, PERCENTSIGN=55, AMPERSAND=56, APOSTROPHE=57, 
		LEFTPARENTHESIS=58, RIGHTPARENTHESIS=59, ASTERISK=60, PLUSSIGN=61, COMMA=62, 
		MINUSSIGN=63, FULLSTOP=64, SOLIDUS=65, COLON=66, SEMICOLON=67, LESSTHANSIGN=68, 
		EQUALSSIGN=69, GREATERTHANSIGN=70, QUESTIONMARK=71, CIRCUMFLEXACCENT=72, 
		UNDERLINE=73;
	public const int
		RULE_line = 0, RULE_linenumber = 1, RULE_endline = 2, RULE_endstatement = 3, 
		RULE_statement = 4, RULE_numericconstant = 5, RULE_sign = 6, RULE_numericrep = 7, 
		RULE_significand = 8, RULE_integer = 9, RULE_fraction = 10, RULE_exrad = 11, 
		RULE_stringconstant = 12, RULE_variable = 13, RULE_numericvariable = 14, 
		RULE_simplenumericvariable = 15, RULE_numericarrayelement = 16, RULE_numericarrayname = 17, 
		RULE_subscript = 18, RULE_stringvariable = 19, RULE_expression = 20, RULE_numericexpression = 21, 
		RULE_term = 22, RULE_factor = 23, RULE_multiplier = 24, RULE_primary = 25, 
		RULE_numericfunctionref = 26, RULE_numericfunctionname = 27, RULE_argumentlist = 28, 
		RULE_argument = 29, RULE_stringexpression = 30, RULE_numericsuppliedfunction = 31, 
		RULE_defstatement = 32, RULE_numericdefinedfunction = 33, RULE_parameterlist = 34, 
		RULE_parameter = 35, RULE_letstatement = 36, RULE_numericletstatement = 37, 
		RULE_stringletstatement = 38, RULE_gotostatement = 39, RULE_ifthenstatement = 40, 
		RULE_relationalexpression = 41, RULE_relation = 42, RULE_equalityrelation = 43, 
		RULE_notless = 44, RULE_notgreater = 45, RULE_notequals = 46, RULE_gosubstatement = 47, 
		RULE_returnstatement = 48, RULE_ongotostatement = 49, RULE_stopstatement = 50, 
		RULE_forline = 51, RULE_nextline = 52, RULE_forstatement = 53, RULE_controlvariable = 54, 
		RULE_initialvalue = 55, RULE_limit = 56, RULE_increment = 57, RULE_nextstatement = 58, 
		RULE_printstatement = 59, RULE_printlist = 60, RULE_printitem = 61, RULE_tabcall = 62, 
		RULE_printseparator = 63, RULE_inputstatement = 64, RULE_variablelist = 65, 
		RULE_inputprompt = 66, RULE_inputreply = 67, RULE_inputlist = 68, RULE_paddeddatum = 69, 
		RULE_datum = 70, RULE_readstatement = 71, RULE_restorestatement = 72, 
		RULE_datastatement = 73, RULE_datalist = 74, RULE_dimensionstatement = 75, 
		RULE_arraydeclaration = 76, RULE_bounds = 77, RULE_optionstatement = 78, 
		RULE_remarkstatement = 79, RULE_randomizestatement = 80;
	public static readonly string[] ruleNames = {
		"line", "linenumber", "endline", "endstatement", "statement", "numericconstant", 
		"sign", "numericrep", "significand", "integer", "fraction", "exrad", "stringconstant", 
		"variable", "numericvariable", "simplenumericvariable", "numericarrayelement", 
		"numericarrayname", "subscript", "stringvariable", "expression", "numericexpression", 
		"term", "factor", "multiplier", "primary", "numericfunctionref", "numericfunctionname", 
		"argumentlist", "argument", "stringexpression", "numericsuppliedfunction", 
		"defstatement", "numericdefinedfunction", "parameterlist", "parameter", 
		"letstatement", "numericletstatement", "stringletstatement", "gotostatement", 
		"ifthenstatement", "relationalexpression", "relation", "equalityrelation", 
		"notless", "notgreater", "notequals", "gosubstatement", "returnstatement", 
		"ongotostatement", "stopstatement", "forline", "nextline", "forstatement", 
		"controlvariable", "initialvalue", "limit", "increment", "nextstatement", 
		"printstatement", "printlist", "printitem", "tabcall", "printseparator", 
		"inputstatement", "variablelist", "inputprompt", "inputreply", "inputlist", 
		"paddeddatum", "datum", "readstatement", "restorestatement", "datastatement", 
		"datalist", "dimensionstatement", "arraydeclaration", "bounds", "optionstatement", 
		"remarkstatement", "randomizestatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'end'", "'E'", "'ABS'", "'ATN'", "'COS'", "'EXP'", "'INT'", "'LOG'", 
		"'RND'", "'SGN'", "'SIN'", "'SQR'", "'TAN'", "'DEF'", "'FN'", "'LET'", 
		"'GO'", "'TO'", "'IF'", "'THEN'", "'SUB'", "'RETURN'", "'ON'", "'STOP'", 
		"'FOR'", "'STEP'", "'NEXT'", "'PRINT'", "'TAB'", "'INPUT'", "'INPUT?'", 
		"'READ'", "'restore'", "'DATA'", "'DIM'", "'OPTION BASE'", "'0'", "'1'", 
		"'REM'", "'RANDOMIZE'", null, null, null, null, null, null, null, null, 
		null, "' '", "'!'", "'\"'", "'#'", "'$'", "'%'", "'&'", "'''", "'('", 
		"')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "';'", "'<'", 
		"'='", "'>'", "'?'", "'^'", "'_'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "LETTER", "DIGIT", "STRINGCHARACTER", "QUOTEDSTRINGCHARACTER", 
		"UNQUOTEDSTRINGCHARACTER", "PLAINSTRINGCHARACTER", "REMARKSTRING", "QUOTEDSTRING", 
		"UNQUOTEDSTRING", "SPACE", "EXCLAMATIONMARK", "QUOTATIONMARK", "NUMBERSIGN", 
		"DOLLARSIGN", "PERCENTSIGN", "AMPERSAND", "APOSTROPHE", "LEFTPARENTHESIS", 
		"RIGHTPARENTHESIS", "ASTERISK", "PLUSSIGN", "COMMA", "MINUSSIGN", "FULLSTOP", 
		"SOLIDUS", "COLON", "SEMICOLON", "LESSTHANSIGN", "EQUALSSIGN", "GREATERTHANSIGN", 
		"QUESTIONMARK", "CIRCUMFLEXACCENT", "UNDERLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BASIC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public BASICParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class LineContext : ParserRuleContext {
		public LinenumberContext linenumber() {
			return GetRuleContext<LinenumberContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 0, RULE_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162; linenumber();
			State = 163; statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinenumberContext : ParserRuleContext {
		public ITerminalNode DIGIT() { return GetToken(BASICParser.DIGIT, 0); }
		public LinenumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linenumber; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterLinenumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitLinenumber(this);
		}
	}

	[RuleVersion(0)]
	public LinenumberContext linenumber() {
		LinenumberContext _localctx = new LinenumberContext(Context, State);
		EnterRule(_localctx, 2, RULE_linenumber);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 165; Match(DIGIT);
			1,4
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndlineContext : ParserRuleContext {
		public LinenumberContext linenumber() {
			return GetRuleContext<LinenumberContext>(0);
		}
		public EndstatementContext endstatement() {
			return GetRuleContext<EndstatementContext>(0);
		}
		public EndlineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_endline; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterEndline(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitEndline(this);
		}
	}

	[RuleVersion(0)]
	public EndlineContext endline() {
		EndlineContext _localctx = new EndlineContext(Context, State);
		EnterRule(_localctx, 4, RULE_endline);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168; linenumber();
			State = 169; endstatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndstatementContext : ParserRuleContext {
		public EndstatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_endstatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterEndstatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitEndstatement(this);
		}
	}

	[RuleVersion(0)]
	public EndstatementContext endstatement() {
		EndstatementContext _localctx = new EndstatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_endstatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public DatastatementContext datastatement() {
			return GetRuleContext<DatastatementContext>(0);
		}
		public DefstatementContext defstatement() {
			return GetRuleContext<DefstatementContext>(0);
		}
		public DimensionstatementContext dimensionstatement() {
			return GetRuleContext<DimensionstatementContext>(0);
		}
		public GosubstatementContext gosubstatement() {
			return GetRuleContext<GosubstatementContext>(0);
		}
		public GotostatementContext gotostatement() {
			return GetRuleContext<GotostatementContext>(0);
		}
		public IfthenstatementContext ifthenstatement() {
			return GetRuleContext<IfthenstatementContext>(0);
		}
		public InputstatementContext inputstatement() {
			return GetRuleContext<InputstatementContext>(0);
		}
		public LetstatementContext letstatement() {
			return GetRuleContext<LetstatementContext>(0);
		}
		public OngotostatementContext ongotostatement() {
			return GetRuleContext<OngotostatementContext>(0);
		}
		public OptionstatementContext optionstatement() {
			return GetRuleContext<OptionstatementContext>(0);
		}
		public PrintstatementContext printstatement() {
			return GetRuleContext<PrintstatementContext>(0);
		}
		public RandomizestatementContext randomizestatement() {
			return GetRuleContext<RandomizestatementContext>(0);
		}
		public ReadstatementContext readstatement() {
			return GetRuleContext<ReadstatementContext>(0);
		}
		public RemarkstatementContext remarkstatement() {
			return GetRuleContext<RemarkstatementContext>(0);
		}
		public RestorestatementContext restorestatement() {
			return GetRuleContext<RestorestatementContext>(0);
		}
		public ReturnstatementContext returnstatement() {
			return GetRuleContext<ReturnstatementContext>(0);
		}
		public StopstatementContext stopstatement() {
			return GetRuleContext<StopstatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			State = 190;
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 173; datastatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 174; defstatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 175; dimensionstatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 176; gosubstatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 177; gotostatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 178; ifthenstatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 179; inputstatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 180; letstatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 181; ongotostatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 182; optionstatement();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 183; printstatement();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 184; randomizestatement();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 185; readstatement();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 186; remarkstatement();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 187; restorestatement();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 188; returnstatement();
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 189; stopstatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumericconstantContext : ParserRuleContext {
		public NumericrepContext numericrep() {
			return GetRuleContext<NumericrepContext>(0);
		}
		public SignContext sign() {
			return GetRuleContext<SignContext>(0);
		}
		public NumericconstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numericconstant; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterNumericconstant(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitNumericconstant(this);
		}
	}

	[RuleVersion(0)]
	public NumericconstantContext numericconstant() {
		NumericconstantContext _localctx = new NumericconstantContext(Context, State);
		EnterRule(_localctx, 10, RULE_numericconstant);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 193;
			_la = TokenStream.La(1);
			if (_la==PLUSSIGN || _la==MINUSSIGN) {
				{
				State = 192; sign();
				}
			}

			State = 195; numericrep();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SignContext : ParserRuleContext {
		public ITerminalNode PLUSSIGN() { return GetToken(BASICParser.PLUSSIGN, 0); }
		public ITerminalNode MINUSSIGN() { return GetToken(BASICParser.MINUSSIGN, 0); }
		public SignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sign; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterSign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitSign(this);
		}
	}

	[RuleVersion(0)]
	public SignContext sign() {
		SignContext _localctx = new SignContext(Context, State);
		EnterRule(_localctx, 12, RULE_sign);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 197;
			_la = TokenStream.La(1);
			if ( !(_la==PLUSSIGN || _la==MINUSSIGN) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumericrepContext : ParserRuleContext {
		public SignificandContext significand() {
			return GetRuleContext<SignificandContext>(0);
		}
		public ExradContext exrad() {
			return GetRuleContext<ExradContext>(0);
		}
		public NumericrepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numericrep; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterNumericrep(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitNumericrep(this);
		}
	}

	[RuleVersion(0)]
	public NumericrepContext numericrep() {
		NumericrepContext _localctx = new NumericrepContext(Context, State);
		EnterRule(_localctx, 14, RULE_numericrep);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 199; significand();
			State = 201;
			_la = TokenStream.La(1);
			if (_la==T__1) {
				{
				State = 200; exrad();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SignificandContext : ParserRuleContext {
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public ITerminalNode FULLSTOP() { return GetToken(BASICParser.FULLSTOP, 0); }
		public FractionContext fraction() {
			return GetRuleContext<FractionContext>(0);
		}
		public SignificandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_significand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterSignificand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitSignificand(this);
		}
	}

	[RuleVersion(0)]
	public SignificandContext significand() {
		SignificandContext _localctx = new SignificandContext(Context, State);
		EnterRule(_localctx, 16, RULE_significand);
		int _la;
		try {
			State = 211;
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 203; integer();
				State = 205;
				_la = TokenStream.La(1);
				if (_la==FULLSTOP) {
					{
					State = 204; Match(FULLSTOP);
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 208;
				_la = TokenStream.La(1);
				if (_la==DIGIT) {
					{
					State = 207; integer();
					}
				}

				State = 210; fraction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerContext : ParserRuleContext {
		public ITerminalNode[] DIGIT() { return GetTokens(BASICParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(BASICParser.DIGIT, i);
		}
		public IntegerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integer; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterInteger(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitInteger(this);
		}
	}

	[RuleVersion(0)]
	public IntegerContext integer() {
		IntegerContext _localctx = new IntegerContext(Context, State);
		EnterRule(_localctx, 18, RULE_integer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 213; Match(DIGIT);
			State = 217;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==DIGIT) {
				{
				{
				State = 214; Match(DIGIT);
				}
				}
				State = 219;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FractionContext : ParserRuleContext {
		public ITerminalNode FULLSTOP() { return GetToken(BASICParser.FULLSTOP, 0); }
		public ITerminalNode[] DIGIT() { return GetTokens(BASICParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(BASICParser.DIGIT, i);
		}
		public FractionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fraction; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.EnterFraction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBASICListener typedListener = listener as IBASICListener;
			if (typedListener != null) typedListener.ExitFraction(this);
		}
	}
